fix: card offsets, table save overhaul